--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-
     <dependencies>
 
         <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
@@ -156,14 +155,6 @@
             <version>23.0.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <!--            <scope>test</scope>-->
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
         <dependency>
             <groupId>io.cucumber</groupId>
@@ -229,12 +220,7 @@
             <version>5.7.1</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0-M1</version>
-        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
         <dependency>
@@ -245,21 +231,21 @@
         </dependency>
 
         <!--            Extent Report with Cucumber-->
-        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-        <dependency>
-            <groupId>com.aventstack</groupId>
-            <artifactId>extentreports</artifactId>
-            <version>5.0.9</version>
-        </dependency>
+<!--         https://mvnrepository.com/artifact/com.aventstack/extentreports-->
+<!--        <dependency>-->
+<!--            <groupId>com.aventstack</groupId>-->
+<!--            <artifactId>extentreports</artifactId>-->
+<!--            <version>5.0.9</version>-->
+<!--        </dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/com.relevantcodes/extentreports -->
-        <dependency>
-            <groupId>com.relevantcodes</groupId>
-            <artifactId>extentreports</artifactId>
-            <version>2.41.2</version>
-        </dependency>
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.relevantcodes/extentreports &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.relevantcodes</groupId>-->
+<!--            <artifactId>extentreports</artifactId>-->
+<!--            <version>2.41.2</version>-->
+<!--        </dependency>-->
 
-        <!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
+<!--         https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport-->
         <dependency>
             <groupId>com.vimalselvam</groupId>
             <artifactId>cucumber-extentsreport</artifactId>
@@ -331,13 +317,13 @@
                     <!--Test Runner Files-->
                     <includes>
                         <include>**/TestRunner.java</include>
-                        <!--                        <include>**/AmazonRegressionTestRunner.java</include>-->
-                        <!--                        <include>**/AmazonSmokeTestRunner.java</include>-->
+                        <!--                        <include>**/CostcoRegressionTestRunner.java</include>-->
+                        <!--                        <include>**/CostcoSmokeTestRunner.java</include>-->
                     </includes>
                     <suiteXmlFiles>
-                        <!--                            <suiteXmlFile>target/test-classes/AmazonTestRunner.xml</suiteXmlFile>-->
-                        <!--                        <suiteXmlFile>target/test-classes/CNNTestRunner.xml</suiteXmlFile>-->
-                        <!--                        <suiteXmlFile>target/test-classes/CignaTestRunner.xml</suiteXmlFile>-->
+                        <suiteXmlFile>target/test-classes/CostcoRegressionTestRunner.xml</suiteXmlFile>
+<!--                        <suiteXmlFile>target/test-classes/CostcoSmokeTestRunner.xml</suiteXmlFile>-->
+<!--                        <suiteXmlFile>target/test-classes/CostcoTestRunner.xml</suiteXmlFile>-->
 
                     </suiteXmlFiles>
                 </configuration>
@@ -347,7 +333,7 @@
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>5.7.1</version>
+                <version>5.6.1</version>
                 <executions>
                     <execution>
                         <id>execution</id>
@@ -357,7 +343,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>BDD Web Automation Cucumber Reports</projectName>
+                            <projectName>BDD-AutomationTestSuite</projectName>
                             <buildNumber>1</buildNumber>
                             <skip>false</skip>
                             <!-- output directory for the generated report -->
@@ -392,8 +378,6 @@
             </plugin>
 
         </plugins>
-
-
 
 
 
